@@ -1,5 +1,6 @@
 Changes in version 0.0.4 - UNRELEASED
  - Improve the runtime performance of the obfs4 handshake tests.
+ - Changed the go.crypto import path to the new location (golang.org/x/crypto).
 
 Changes in version 0.0.3 - 2014-10-01
  - Change the obfs4 bridge line format to use a "cert" argument instead of the
